--- a/index.html
+++ b/index.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Project</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <header>
-    <h1>Welcome to My First Project</h1>
-  </header>
-  <main>
-    <p>This is a simple HTML file for my first project.</p>
-  </main>
-  <footer>
-    <p>&copy; 2025 Ajah</p>
-  </footer>
+    <script src="index.js"></script>
 </body>
 </html>
