--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <button onclick="gitIt()">Git It.</button>
+    <button onclick="smiley()" id="smilebutton">"Click me. 😔"</button>
     <script src="index.js"></script>
+    <p>This an exercise for Lesson: Local Respository.</p>
 </body>
 </html>
